# fixation-target

./: .gitignore  LICENSE  README.md  example.py  example_config.json  examples_all.py  pyproject.toml
.github/workflows/: publish.yml
fixation_target/: __init__.py  cli.py  config.py  converter.py  generator.py
